docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CMEDITCommand.md
# `CMEDITCommand`

<a id="ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CMEDITCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.CMEDITCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a CMEDIT command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|-----------------------------------------------------------|------------------------------------------------------|
| [`Aname`](#CMEDITCommand.Aname)                           | Gets the assembly name.                              |
| [`Cnames`](#CMEDITCommand.Cnames)                         | Gets the component names.                            |
| [`Index`](#CMEDITCommand.Index)                           | Gets the command index.                              |
| [`Name`](#CMEDITCommand.Name)                             | Gets the command name.                               |
| [`Oper`](#CMEDITCommand.Oper)                             | Gets the operation label (add or dele).              |
| [`ToCdbCommandString`](#CMEDITCommand.ToCdbCommandString) | Gets the command text formatted as a CDB file entry. |

<a id="property-detail"></a>

## Property detail

<a id="CMEDITCommand.Aname"></a>

### *property* CMEDITCommand.Aname *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the assembly name.

<!-- !! processed by numpydoc !! -->

<a id="CMEDITCommand.Cnames"></a>

### *property* CMEDITCommand.Cnames *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[str](https://docs.python.org/3/library/stdtypes.html#str)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the component names.

<!-- !! processed by numpydoc !! -->

<a id="CMEDITCommand.Index"></a>

### *property* CMEDITCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="CMEDITCommand.Name"></a>

### *property* CMEDITCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="CMEDITCommand.Oper"></a>

### *property* CMEDITCommand.Oper *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the operation label (add or dele).

<!-- !! processed by numpydoc !! -->

<a id="CMEDITCommand.ToCdbCommandString"></a>

### *property* CMEDITCommand.ToCdbCommandString *: Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command text formatted as a CDB file entry.
Gets the command parameters formatted as a string.

<!-- !! processed by numpydoc !! -->

